# sublert

./: README.md  config.py  pyproject.toml  requirements.txt  run.sh  setup.py  setup.sh  sublert.py
config/: settings.toml  sublert.cron
lib/: certificate.py  config.py  database.py  dns.py  domain.py  http.py  slack.py
output/: migrate.py
